--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "@angular/material": "^20.0.2",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@types/socket.io-client": "^1.4.36",
+    "chart.js": "^4.5.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "jwt-decode": "^4.0.0",
+    "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
