--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/socket.io-client": "^1.4.36",
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "highcharts": "^12.2.0",
+    "highcharts-more": "^0.1.7",
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
@@ -36,6 +38,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/highcharts": "^5.0.44",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.7.0",
